Port to 1.19.2